--- a/CSS/common.css
+++ b/CSS/common.css
@@ -511,8 +511,7 @@ padding: 0;
 
 
 .client-link {
-	width: 170px;
-	height: 92px;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -532,8 +531,8 @@ fill var(--animation);
 }
 
 .client-svg{
-	width: 106px;
-	height: 60px;
+	width: 170px;
+	height: 92px;
 }
 
 
@@ -658,7 +657,79 @@ margin-bottom: 0px;
 	fill: var(--white);
 }
 
+/*mailing*/
 
+.mailing {
+	display: inline-flex;
+		justify-content: center;
+		align-items: center;
+	margin-left: 93px;
+}
+
+.mailing-wrapper{
+display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.mailing-form{
+
+}
+
+.mailing-title{
+	margin-bottom: 20px;
+		font-size: 14px;
+		font-weight: 700;
+		line-height: 1.14;
+		text-transform: uppercase;
+		color: var(--white);
+		text-align: left;
+	
+}
+
+.mailing-input {
+	height: 50px;
+	width: 358px;
+	padding-left: 16px;
+	border-radius: 4px;
+	margin-right: 12px;
+	color: var(--white);
+	background-color: transparent;
+	box-shadow: 0px 4px 4px 0px #00000026;
+	border: 1px solid #FFFFFF4D
+}
+
+.mailing-input::placeholder {
+	font-size: 16px;
+	line-height: 20px;
+	color: rgba(255, 255, 255, 0.6);
+
+}
+
+.mailing-submit {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50px;
+	border: 1px solid transparent;
+	background-color: var(--accent-color);
+	box-shadow: 0px 4px 4px 0px #00000026;
+	border-radius: 4px;
+	cursor: pointer;
+	width: 200px;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 1.87;
+	letter-spacing: 0.06em;
+	text-align: center;
+	color: var(--white);
+	transition: transform var(--animation);
+}
+
+.mailing-svg {
+	margin-left: 10px;
+}
 
 /*porfolio*/
 
@@ -807,7 +878,7 @@ background: var(--accent-color);
 	font-weight: 700;
 	font-size: 18px;
 	line-height: 2;
-	/* identical to box height, or 200% */
+	
 	text-align: left;
 	letter-spacing: 0.06em;
 	margin-bottom: 4px;
@@ -833,6 +904,7 @@ background: var(--accent-color);
 	width: 100%;
 	height: 100%;
 
+	opacity: 1;
 	transition: opacity var(--animation);
 	background: rgba(0, 0, 0, 0.2);
 }
@@ -841,6 +913,7 @@ background: var(--accent-color);
 .backdrop.is-hidden {
 	opacity: 0;
 	pointer-events: none;
+
 }
 
 
@@ -860,12 +933,21 @@ background: var(--accent-color);
 	padding: 0;
 }
 
+.button-modal:hover,
+.button-modal:focus {
+	fill: var(--accent-color);
+}
+
 
 .modal {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
 
 	min-width: 528px;
 	min-height: 581px;
@@ -874,3 +956,177 @@ background: var(--accent-color);
 	border-radius: 4px;
 	box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #00000024, 0px 1px 3px 0px #0000001F;
 }
+
+
+
+.form {
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+
+.form-act {
+	font-size: 20px;
+		font-weight: 700;
+		line-height: 23px;
+		text-align: center;
+		margin-bottom: 12px;
+		color: var(--title-text-color);
+
+
+
+}
+.form-field {
+	display: inline-flex;
+	position: relative;
+}
+
+
+
+.form-about {
+	display: flex;
+	margin-bottom: 4px;
+	font-size: 12px;
+	line-height: 14px;
+	letter-spacing: 0.01em;
+
+
+
+}
+.form-input {
+
+	padding-left: 42px;
+	margin-bottom: 10px;
+	height: 40px;
+	width: 448px;
+	border-radius: 4px;
+	border: 1px solid #21212133;
+	transition: border var(--animation);
+
+
+}
+.form-input:focus {
+	outline: none;
+	border: 1px solid var(--accent-color);
+
+}
+
+.form-svg {
+position: absolute;
+	top: 44%;
+	left: 15px;
+	
+	transition: fill var(--animation);
+
+}
+.form-input:focus + .form-svg {
+	fill: var(--accent-color);
+}
+
+.form-coment-textarea {
+	margin-bottom: 20px;
+	padding: 12px 16px;
+	height: 120px;
+	width: 448px;
+	border-radius: 4px;
+	border: 1px solid #21212133;
+	resize: none
+}
+
+.form-coment-textarea:focus {
+			outline: none;
+			border: 1px solid var(--accent-color);
+		}
+	
+.form-coment-textarea::placeholder {
+			font-size: 12px;
+			line-height: 14px;
+			letter-spacing: 0.01em;
+			color: rgba(117, 117, 117, 0.5);
+		}
+	
+.check {
+			margin-bottom: 20px;
+			display: inline-flex;
+			justify-content: center;
+			align-items: center;
+		}
+	
+.form-check-label {
+			display: inline-flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 14px;
+			font-weight: 400;
+			line-height: 24px;
+			text-align: center;
+			color: var(--title-text-color);
+	
+		}
+	
+.form-check-input {
+			position: absolute;
+			width: 1px;
+			height: 1px;
+			margin: -1px;
+			border: 0;
+			padding: 0;
+			clip: rect(0 0 0 0);
+			overflow: hidden;
+		}
+	
+		.checkbox-svg {
+			display: inline-block;
+			margin-right: 7px;
+			height: 15px;
+			width: 16px;
+			border-radius: 4px;
+			border: 2px solid var(--title-text-color);
+			transition: var(--animation);
+	
+		}
+	
+.form-check-input:checked ~ .checkbox-svg {
+		background-color: var(--accent-color);
+		border-color: var(--accent-color);
+		background-image: url('../IMG/icon\check.svg');
+		background-size: contain;
+		background-origin: border-box;
+	
+	
+}
+	
+	
+		.check-link {
+			display: inline-flex;
+			color: hsla(207, 90%, 54%, 1);
+	
+		}
+	
+		.form-submit {
+			height: 50px;
+			width: 200px;
+			border-radius: 4px;
+			border: 1px solid transparent;
+			background-color: rgba(33, 150, 243, 1);
+			box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+				0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+				0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+			cursor: pointer;
+			transition: var(--animation);
+	
+	
+			font-size: 16px;
+			font-weight: 700;
+			line-height: 1.18;
+			letter-spacing: 0.06em;
+			text-align: center;
+			color: rgba(255, 255, 255, 1);
+	
+		}
+
+
+
+
